; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/ext2fs/extr_ext2_vnops.c_ext2fifo_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/ext2fs/extr_ext2_vnops.c_ext2fifo_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.vop_close_args*)* }
%struct.vop_close_args = type { %struct.vnode* }
%struct.vnode = type { i32 }

@fifo_specops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vop_close_args*)* @ext2fifo_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ext2fifo_close(%struct.vop_close_args* %0) #0 {
  %2 = alloca %struct.vop_close_args*, align 8
  %3 = alloca %struct.vnode*, align 8
  store %struct.vop_close_args* %0, %struct.vop_close_args** %2, align 8
  %4 = load %struct.vop_close_args*, %struct.vop_close_args** %2, align 8
  %5 = getelementptr inbounds %struct.vop_close_args, %struct.vop_close_args* %4, i32 0, i32 0
  %6 = load %struct.vnode*, %struct.vnode** %5, align 8
  store %struct.vnode* %6, %struct.vnode** %3, align 8
  %7 = load %struct.vnode*, %struct.vnode** %3, align 8
  %8 = call i32 @VI_LOCK(%struct.vnode* %7)
  %9 = load %struct.vnode*, %struct.vnode** %3, align 8
  %10 = getelementptr inbounds %struct.vnode, %struct.vnode* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp sgt i32 %11, 1
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.vnode*, %struct.vnode** %3, align 8
  %15 = call i32 @ext2_itimes_locked(%struct.vnode* %14)
  br label %16

16:                                               ; preds = %13, %1
  %17 = load %struct.vnode*, %struct.vnode** %3, align 8
  %18 = call i32 @VI_UNLOCK(%struct.vnode* %17)
  %19 = load i32 (%struct.vop_close_args*)*, i32 (%struct.vop_close_args*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @fifo_specops, i32 0, i32 0), align 8
  %20 = load %struct.vop_close_args*, %struct.vop_close_args** %2, align 8
  %21 = call i32 %19(%struct.vop_close_args* %20)
  ret i32 %21
}

declare dso_local i32 @VI_LOCK(%struct.vnode*) #1

declare dso_local i32 @ext2_itimes_locked(%struct.vnode*) #1

declare dso_local i32 @VI_UNLOCK(%struct.vnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
